--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,11 @@
 		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>
 
 	</servlet>
+	<servlet>
+		<servlet-name>ModifierCollaborateurController</servlet-name>
+		<servlet-class>dev.sgp.web.ModifierCollaborateurController</servlet-class>
+
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>ListerCollaborateursController</servlet-name>
 		<url-pattern>/collaborateurs/lister</url-pattern>
@@ -22,5 +27,9 @@
 	<servlet-mapping>
 		<servlet-name>EditerCollaborateurController</servlet-name>
 		<url-pattern>/collaborateurs/editer</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ModifierCollaborateurController</servlet-name>
+		<url-pattern>/collaborateurs/modifier</url-pattern>
 	</servlet-mapping>
 </web-app>
